--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,14 @@ body {
     font-family: 'Poppins', sans-serif;
     background: #e6e6e6;
 }
+img.logo {
+    max-width: 100%;
+    max-height: 100px; /* Ubah angka ini sesuai selera: 80px / 120px / 150px */
+    display: block;
+    margin: 0 auto 20px auto;
+    object-fit: contain;
+}
+
 
 .main-container {
     display: flex;
